Release Notes DDS 2.9.1
-----------------------
test/print.cpp: Fixed bug in equals_to_string() noticed by tucsu.

src/Makefiles/Makefile_linux_shared: Fixed use of static variables.
Noticed by Nicolas Hammond.

Release Notes DDS 2.9.0
-----------------------
- Fixed crashes in certain multi-threading types
- Added GetDDSInfo to Exports.def (thanks to Paul Barden)
- Fixed casting problems with some compilers in ThreadMgr
- Updated documentation


Release Notes DDS 2.9.0 beta
----------------------------
Included code for a number of multi-threading systems:
- Windows API (was already there)
- OpenMP (was already there)
- GCD (new, intended for Mac, not really tested)
- Boost (new, works on many systems, but you may have to install it)
- STL (new, should work on most systems with a modern compiler)
- TBB (new, not so broadly available, but portable in principle)
- STLIMPL (new, experimental)
- PPLIMPL (new, experimental)

Tested combinations include:
- Visual C++ with Windows API, OpenMP, Boost, STL
- Cygwin g++ with Windows API, OpenMP, Boost, STL
- mingw g++ with OpenMP, Boost, STL
- Linux g++ with OpenMP, Boost, STL
- MacOS clang with GCD, Boost, STL (static and shared library)
- MacOS GNU g++ with OpenMP, Boost, STL

The number of threads is now unlimited in principle, although the
DLL will not let you go beyond the number of processor cores.

Enabled the transposition-table code for both the large and the small
versions in the same DLL.  Therefore there is only a single DLL
distributed now for both.  The SMALL_MEMORY compile switch is gone.

Enabled the DLL to pick the best combination of large and small
transposition tables for a given resource set-up consisting of
available memory and number of threads.  Yes, the DLL can choose to
run 4 large and 2 small threads, for example.

Expanded the DDSInfo systemString (which now needs 1024 chars as 
stated in the new dll.h).

MAXNOOFTABLES was increased from 32 to 40.
