@@ -5,6 +5,9 @@ test/print.cpp: Fixed bug in equals_to_string() noticed by tucsu.
 src/Makefiles/Makefile_linux_shared: Fixed use of static variables.
 Noticed by Nicolas Hammond.
 
+test/testcommon.cpp: Added initializations that some compilers
+complained about. Noticed by Nicolas Hammond.
+
 Release Notes DDS 2.9.0
 -----------------------
 - Fixed crashes in certain multi-threading types
